--- a/src/Components/Main/main.css
+++ b/src/Components/Main/main.css
@@ -1,17 +1,9 @@
-/* .content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
-
 .content {
   padding: 1rem;
 }
 
 .product {
-  /* width: 350px; */
-  height: 590px;
-  width: 380px;
+  height: 500px;
   border-radius: 5px;
   overflow: hidden;
 }
@@ -19,7 +11,6 @@
 .product img {
   width: 100%;
   height: 70%;
-  /* object-fit: contain; */
 }
 
 .main {
@@ -38,6 +29,13 @@
   font-weight: 500;
   align-items: center;
   font-size: 20px;
+}
+
+.pride-detail-a {
+  height: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .product a {
@@ -80,10 +78,20 @@
   width: 100%;
   height: 100%;
   background-size: cover;
-  background-position: center;
+  /* background-position: center; */
   transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+  cursor: pointer;
 }
 
 .product:hover .background-img {
   transform: scale(1.1);
+}
+
+.backdrop {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: fixed;
 }
