--- a/src/Components/Main/main.css
+++ b/src/Components/Main/main.css
@@ -15,8 +15,9 @@
 
 .main {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
   grid-gap: 5px;
+  justify-items: center;
 }
 
 .main li {
