--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -1,6 +1,6 @@
 .footer-banner {
   padding: 1rem;
-  background-color: #203040;
+  background-color: var(--header-color);
   display: flex;
   justify-content: center;
   align-items: center;
