changed interface added more colors to header

--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -2,7 +2,7 @@
   display: flex;
   width: 100%;
   height: 100vh;
-  background-color: #f5f5f5;
+  background-color: #dcdcdc;
 }
 
 .content-text {
@@ -17,14 +17,15 @@
 }
 
 .content-big-pic {
-  height: 60%;
+  height: 100%;
   width: 100%;
-  background-image: url("../../Assets/picone.jpg");
+  background-image: url("../../Assets/mainlight.jpg");
+  background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-.content-small-one {
+/* .content-small-one {
   background-color: blue;
   height: 40%;
   width: 50%;
@@ -33,7 +34,7 @@
   background-image: url("../../Assets/pic2.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-}
+} */
 
 .content-text h1 {
   padding-top: 8rem;
