--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -2,7 +2,8 @@
   display: flex;
   width: 100%;
   height: 100vh;
-  background-color: #dcdcdc;
+  /* background-color: #dcdcdc; */
+  background-color: var(--background-color);
 }
 
 .content-text {
