--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -10,6 +10,7 @@
   height: 100%;
   width: 50%;
   font-family: "Cormorant Garamond", serif;
+  color: var(--text-color);
 }
 
 .content-pic-parent {
@@ -41,7 +42,7 @@
   padding-top: 8rem;
   text-align: right;
   padding-right: 90px;
-  color: #333333;
+  color: var(--text-color);
   font-weight: 700;
   letter-spacing: 10px;
 }
@@ -57,6 +58,7 @@
 }
 
 .shop-btn {
+  color: black;
   margin-top: 100px;
   background-color: var(--btn-color);
   width: 100px;
