--- a/src/Components/cardInfo/cardinfo.css
+++ b/src/Components/cardInfo/cardinfo.css
@@ -1,7 +1,7 @@
 .card-info {
   width: 80%;
   height: 80%;
-  background-color: white;
+  background-color: var(--background-color);
   position: fixed;
   top: -100%;
   left: 50%;
@@ -10,6 +10,7 @@
   justify-content: space-between;
   padding: 2rem;
   z-index: 1;
+  color: var(--text-color);
 }
 
 .show {
@@ -77,13 +78,14 @@
 }
 
 .size-btn {
-  background-color: #f2f2f2;
+  color: black;
   width: 30px;
   margin: 0 5px;
   text-align: center;
   padding: 2px 8px;
   cursor: pointer;
   border: 0.5px solid transparent;
+  background-color: var(--btn-color);
 }
 
 .size-btn-active {
