--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,19 @@ body {
 
 .whiteMode {
   --background-color: #dcdcdc;
+  --header-color: #7a7a7a;
+  --text-color: #000;
+  --switch-color: #fff;
 }
 
 .darkMode {
-  --background-color: #000;
+  --background-color: #363636;
+  --header-color: #181818;
+  --text-color: #f5f5f5;
+  --switch-color: #ff8000;
 }
 
 :root {
   --link-color: #5790eb;
-  --btn-color: #f0c040;
-  --header-color: #7a7a7a;
+  --btn-color: #ff8000;
 }
