--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -18,6 +18,10 @@
   height: 100%;
 }
 
+.content-pic-parent img {
+  width: 100% !important;
+}
+
 /* .content-big-pic {
   height: 100%;
   width: 100%;
@@ -69,4 +73,33 @@
   margin-right: 90px;
   cursor: pointer;
   text-align: center;
+}
+
+@media screen and (max-width: 995px) {
+  .content-pic-parent {
+    display: none;
+  }
+
+  .content-root {
+    justify-content: center;
+  }
+
+  .content-text {
+    width: 100%;
+  }
+
+  .content-text h1 {
+    text-align: center;
+    width: 100%;
+  }
+  .content-text h2 {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+  }
+  .shop-btn {
+    margin: 0 auto;
+    margin-top: 50px;
+  }
 }
