--- a/src/Pages/Orders/CheckoutForm.css
+++ b/src/Pages/Orders/CheckoutForm.css
@@ -191,3 +191,9 @@ button {
   cursor: pointer;
   background: transparent;
 }
+
+@media screen and (max-width: 700px) {
+  .Form {
+    padding-bottom: 20px;
+  }
+}
